--- a/public/style/components/footer.scss
+++ b/public/style/components/footer.scss
@@ -127,7 +127,7 @@
             display: flex;
             flex-direction: column;
             margin-top: 2.13rem;
-            gap: 3.81rem;            
+            gap: 3.81rem;
         }
     }
 
@@ -187,10 +187,10 @@
         width: 100%;
         height: 100%;
         opacity: 0.02;
-        background-image: url('../assets/background.png');
+        background-image: url('.{{URL::to('/');}}/assets/background.png');
         background-position: 50% 0;
       }
-}   
+}
 
 #column-extra {
     columns: 1;
