--- a/public/style/pages/contact.css
+++ b/public/style/pages/contact.css
@@ -111,7 +111,7 @@
 .contact__form__name + span::before {
   position: absolute;
   z-index: 16;
-  content: url("../../assets/name.png");
+  content: url("../.{{URL::to('/');}}/assets/name.png");
   width: 1rem;
   height: 1rem;
   left: 1.25rem;
@@ -120,7 +120,7 @@
 .contact__form__phone + span::before {
   position: absolute;
   z-index: 16;
-  content: url("../../assets/cell.png");
+  content: url("../.{{URL::to('/');}}/assets/cell.png");
   width: 1rem;
   height: 1rem;
   left: 1.25rem;
@@ -129,7 +129,7 @@
 .contact__form__email + span::before {
   position: absolute;
   z-index: 16;
-  content: url("../../assets/email.png");
+  content: url("../.{{URL::to('/');}}/assets/email.png");
   width: 1rem;
   height: 1rem;
   left: 1.25rem;
@@ -138,7 +138,7 @@
 .contact__form__subject + span::before {
   position: absolute;
   z-index: 16;
-  content: url("../../assets/subject.png");
+  content: url("../.{{URL::to('/');}}/assets/subject.png");
   width: 1rem;
   height: 1rem;
   left: 1.25rem;
@@ -150,7 +150,7 @@
 .contact__form__textarea + span::before {
   position: absolute;
   z-index: 16;
-  content: url("../../assets/message.png");
+  content: url("../.{{URL::to('/');}}/assets/message.png");
   width: 1rem;
   height: 1rem;
   left: 1.25rem;
