--- a/public/style/pages/index.scss
+++ b/public/style/pages/index.scss
@@ -41,7 +41,7 @@
             top: 0;
             width: 100%;
             height: 100%;
-            background-image: url('../../assets/calendar.png');
+            background-image: url('../.{{URL::to('/');}}/assets/calendar.png');
         }
 
         &__dateinput {
