--- a/public/style/pages/room_details.scss
+++ b/public/style/pages/room_details.scss
@@ -77,7 +77,7 @@
             top: 0;
             width: 100%;
             height: 100%;
-            background-image: url('../../assets/calendar_secondary.png');
+            background-image: url('../.{{URL::to('/');}}/assets/calendar_secondary.png');
         }
 
         &__label {
@@ -214,7 +214,7 @@
             width: 9.38rem;
             height: 9.38rem;
             position: relative;
-            
+
             & img {
                 width: 9.38rem;
                 height: 9.38rem;
@@ -399,10 +399,10 @@
 
         &__header {
             display: flex;
-            flex: 1 0 auto; 
-            width: 100%; 
-            justify-content: center; 
-            gap: 1.875rem;         
+            flex: 1 0 auto;
+            width: 100%;
+            justify-content: center;
+            gap: 1.875rem;
         }
 
         &__header-left {
@@ -426,8 +426,8 @@
         &__body {
             width: 100%;
             display: flex;
-            gap: 1.875rem;     
-            justify-content: center;     
+            gap: 1.875rem;
+            justify-content: center;
         }
 
         &__left-body {
@@ -500,7 +500,7 @@
 
             }
 
-            &__swiper-next, 
+            &__swiper-next,
             &__swiper-prev {
                 display: none;
             }
