--- a/public/style/pages/rooms.css
+++ b/public/style/pages/rooms.css
@@ -47,8 +47,18 @@
   margin-top: 0.25rem;
   color: #BDBDBD;
 }
-.room__details span {
+.room__details a {
+  text-decoration: none;
+  color: #BDBDBD;
+}
+.room__details__price {
   color: #BEAD8E;
+}
+.room__details__booked {
+  color: #3f0000;
+}
+.room__details__unavailable {
+  color: #BDBDBD;
 }
 .room__perks {
   position: absolute;
@@ -69,6 +79,12 @@
   width: 1rem;
 }
 
+@media only screen and (min-width: 1000px) {
+  .room__image img {
+    width: 100%;
+    max-height: 31.25rem;
+  }
+}
 .rooms {
   overflow: hidden;
   margin: 0 1.25rem;
