--- a/public/style/pages/room_details.css
+++ b/public/style/pages/room_details.css
@@ -69,8 +69,18 @@
   margin-top: 0.25rem;
   color: #BDBDBD;
 }
-.room__details span {
+.room__details a {
+  text-decoration: none;
+  color: #BDBDBD;
+}
+.room__details__price {
   color: #BEAD8E;
+}
+.room__details__booked {
+  color: #3f0000;
+}
+.room__details__unavailable {
+  color: #BDBDBD;
 }
 .room__perks {
   position: absolute;
@@ -91,6 +101,12 @@
   width: 1rem;
 }
 
+@media only screen and (min-width: 1000px) {
+  .room__image img {
+    width: 100%;
+    max-height: 31.25rem;
+  }
+}
 .room-detail {
   overflow: hidden;
   padding: 0 1.25rem;
@@ -161,7 +177,7 @@
   top: 0;
   width: 100%;
   height: 100%;
-  background-image: url("../.{{URL::to('/');}}/assets/calendar_secondary.png");
+  background-image: url("../.{{URL::to("/");}}/assets/calendar_secondary.png");
 }
 .room-detail__calendar__label {
   font-weight: 700;
