--- a/public/style/pages/contact.scss
+++ b/public/style/pages/contact.scss
@@ -85,8 +85,13 @@
             position: relative;
         }
 
+        &__error {
+            color: #d63939;
+            padding: 1.65rem 0;
+        }
+
         &__input, &__textarea {
-            height: 4.19rem;
+            min-height: 4.19rem;
             background-color: $graythree;
             width: 100%;
             padding: 1.56rem 1.25rem;
@@ -108,7 +113,7 @@
             & + span::before {
                 position: absolute;
                 z-index: 16;
-                content: url("../.{{URL::to('/');}}/assets/name.png");
+                content: url("../../assets/name.png");
                 width: 1rem;
                 height: 1rem;
                 left: 1.25rem;
@@ -120,7 +125,7 @@
             & + span::before {
                 position: absolute;
                 z-index: 16;
-                content: url("../.{{URL::to('/');}}/assets/cell.png");
+                content: url("../../assets/cell.png");
                 width: 1rem;
                 height: 1rem;
                 left: 1.25rem;
@@ -132,7 +137,7 @@
             & + span::before {
                 position: absolute;
                 z-index: 16;
-                content: url("../.{{URL::to('/');}}/assets/email.png");
+                content: url("../../assets/email.png");
                 width: 1rem;
                 height: 1rem;
                 left: 1.25rem;
@@ -144,7 +149,7 @@
             & + span::before {
                 position: absolute;
                 z-index: 16;
-                content: url("../.{{URL::to('/');}}/assets/subject.png");
+                content: url("../../assets/subject.png");
                 width: 1rem;
                 height: 1rem;
                 left: 1.25rem;
@@ -158,7 +163,7 @@
             & + span::before {
                 position: absolute;
                 z-index: 16;
-                content: url("../.{{URL::to('/');}}/assets/message.png");
+                content: url("../../assets/message.png");
                 width: 1rem;
                 height: 1rem;
                 left: 1.25rem;
@@ -213,7 +218,7 @@
             display: grid;
             margin-top: 6rem;
             grid-template-columns: 1fr 1fr;
-            grid-template-rows: 4.3rem 4.3rem 1fr 1fr;
+            grid-template-rows: min(1fr, 4.3rem) min(1fr, 4.3rem) 1fr 1fr;
             width: 70%;
             max-width: 100ch;
             gap: 1.5rem;
