--- a/public/style/style.css
+++ b/public/style/style.css
@@ -451,7 +451,7 @@
   width: 100%;
   height: 100%;
   opacity: 0.02;
-  background-image: url(".{{URL::to('/');}}/assets/background.png");
+  background-image: url("../assets/background.png");
   background-position: 50% 0;
 }
 
