--- a/public/style/pages/index.css
+++ b/public/style/pages/index.css
@@ -230,7 +230,7 @@
   top: 0;
   width: 100%;
   height: 100%;
-  background-image: url("../.{{URL::to('/');}}/assets/calendar.png");
+  background-image: url("../../assets/calendar.png");
 }
 .index__calendar__dateinput {
   position: absolute;
