--- a/public/style/pages/room_details.css
+++ b/public/style/pages/room_details.css
@@ -153,6 +153,10 @@
   flex-direction: column;
   padding: 1.57rem 1.25rem;
 }
+.room-detail__calendar a {
+  text-decoration: none;
+  color: #222222;
+}
 .room-detail__calendar__title {
   text-align: center;
   font-weight: 700;
@@ -177,7 +181,7 @@
   top: 0;
   width: 100%;
   height: 100%;
-  background-image: url("../.{{URL::to("/");}}/assets/calendar_secondary.png");
+  background-image: url("../../assets/calendar_secondary.png");
 }
 .room-detail__calendar__label {
   font-weight: 700;
@@ -231,6 +235,41 @@
 }
 .room-detail__calendar__input:focus {
   outline: none;
+}
+.room-detail__calendar__special-input {
+  font-weight: 400;
+  font-size: 0.88rem;
+  line-height: 0.95rem;
+  color: #777777;
+  border: 0;
+  background-color: #F8F8F8;
+  width: 100%;
+  height: 3.75rem;
+  padding: 1.5rem 1.88rem;
+  padding-right: 3.76rem;
+}
+.room-detail__calendar__special-input:focus {
+  outline: none;
+}
+.room-detail__calendar__select {
+  font-weight: 400;
+  font-size: 0.88rem;
+  line-height: 0.95rem;
+  color: #777777;
+  border: 0;
+  background-color: #F8F8F8;
+  width: 100%;
+  height: 3.75rem;
+  padding: 0.75rem 1.88rem;
+  padding-right: 3.76rem;
+  margin-bottom: 1rem;
+}
+.room-detail__calendar__select:focus {
+  outline: none;
+}
+.room-detail__calendar__error {
+  color: #d63939;
+  padding: 1.65rem 0;
 }
 .room-detail__calendar__button {
   margin-top: 0.06rem;
