--- a/public/style/pages/room_details.scss
+++ b/public/style/pages/room_details.scss
@@ -51,6 +51,11 @@
         flex-direction: column;
         padding: 1.57rem 1.25rem;
 
+        a {
+            text-decoration: none;
+            color: $black;
+        }
+
         &__title {
             text-align: center;
             font-weight: 700;
@@ -77,7 +82,7 @@
             top: 0;
             width: 100%;
             height: 100%;
-            background-image: url('../.{{URL::to('/');}}/assets/calendar_secondary.png');
+            background-image: url('../../assets/calendar_secondary.png');
         }
 
         &__label {
@@ -139,6 +144,46 @@
             &:focus {
                 outline: none;
             }
+        }
+
+        &__special-input {
+            font-weight: 400;
+            font-size: 0.88rem;
+            line-height: 0.95rem;
+            color: $darkgray;
+            border: 0;
+            background-color: $graythree;
+            width: 100%;
+            height: 3.75rem;
+            padding: 1.5rem 1.88rem;
+            padding-right: calc(1.88rem + 1.88rem);
+
+            &:focus {
+                outline: none;
+            }
+        }
+
+        &__select {
+            font-weight: 400;
+            font-size: 0.88rem;
+            line-height: 0.95rem;
+            color: $darkgray;
+            border: 0;
+            background-color: $graythree;
+            width: 100%;
+            height: 3.75rem;
+            padding: 0.75rem 1.88rem;
+            padding-right: calc(1.88rem + 1.88rem);
+            margin-bottom: 1rem;
+
+            &:focus {
+                outline: none;
+            }
+        }
+
+        &__error {
+            color: #d63939;
+            padding: 1.65rem 0;
         }
 
         &__button {
